changed all the 'clas' to 'class'

--- a/html/amber.html
+++ b/html/amber.html
@@ -452,7 +452,7 @@ Fires 2 arrows per Aimed Shot. The second arrow deals 20% of the first arrow's D
                             <span class="constellationsName">Bunny Triggered</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Baron Bunny, new and improved! Hitting Baron Bunny's foot with a fully-charged Aimed Shot manually detonates it.
+                                    <span class="constellationsDescription">Baron Bunny, new and improved! Hitting Baron Bunny's foot with a fully-charged Aimed Shot manually detonates it.
 Explosion via manual detonation deals 200% additional DMG.</span>
                             </div>
                         </div>
@@ -476,7 +476,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">It's Not Just Any Doll...</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Decreases Explosive Puppet's CD by 20%. Adds 1 additional charge.
                                     </span>
                             </div>
@@ -489,7 +489,7 @@ Decreases Explosive Puppet's CD by 20%. Adds 1 additional charge.
                             <span class="constellationsName">It's Baron Bunny!</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Explosive Puppet by 3.
+                                    <span class="constellationsDescription">Increase the Level of Explosive Puppet by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
