--- a/html/barbara.html
+++ b/html/barbara.html
@@ -452,7 +452,7 @@ Barbara regenerates 1 Energy every 10s.
                             <span class="constellationsName">Vitality Burst</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Decreases the CD of Let the Show Begin by <strong>15%</strong>.
+                                    <span class="constellationsDescription">Decreases the CD of Let the Show Begin by <strong>15%</strong>.
 During the ability's duration, the current character gains <strong>15%</strong> Hydro DMG Bonus.</span>
                             </div>
                         </div>
@@ -476,7 +476,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Attentiveness be My Power</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Every enemy hit by Barbara's Charged Attack regenerates 1 Energy for her. A maximum of 5 energy can be regenerated in this manner with any one Charged Attack.
                                     </span>
                             </div>
@@ -489,7 +489,7 @@ Every enemy hit by Barbara's Charged Attack regenerates 1 Energy for her. A maxi
                             <span class="constellationsName">The Purest Companionship</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Let the Show Begin by 3.
+                                    <span class="constellationsDescription">Increase the Level of Let the Show Begin by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
