--- a/html/beidou.html
+++ b/html/beidou.html
@@ -500,7 +500,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Stunning Revenge</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Within 10s of taking DMG, Beidou's Normal Attacks gain 20% additional Electro DMG.
                                     </span>
                             </div>
@@ -513,7 +513,7 @@ Within 10s of taking DMG, Beidou's Normal Attacks gain 20% additional Electro DM
                             <span class="constellationsName">Crimson Tidewalker</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Stormbreaker by 3.
+                                    <span class="constellationsDescription">Increase the Level of Stormbreaker by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
