--- a/html/itto.html
+++ b/html/itto.html
@@ -454,7 +454,7 @@ After using Royal Descent: Behold, Itto the Evil!, Arataki Itto gains 2 stacks o
                             <span class="constellationsName">Gather 'Round, It's a Brawl!</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">After using Royal Descent: Behold, Itto the Evil!, each party member whose Element is Geo will decrease that skill's CD by 1.5s and restore 6 Energy to Arataki Itto.
+                                    <span class="constellationsDescription">After using Royal Descent: Behold, Itto the Evil!, each party member whose Element is Geo will decrease that skill's CD by 1.5s and restore 6 Energy to Arataki Itto.
 CD can be decreased by up to 4.5s in this manner. Max 18 Energy can be restored in this manner.</span>
                             </div>
                         </div>
@@ -478,7 +478,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Jailhouse Bread and Butter</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When the Raging Oni King state caused by Royal Descent: Behold, Itto the Evil! ends, all nearby party members gain 20% DEF and 20% ATK for 10s.
                                     </span>
                             </div>
@@ -491,7 +491,7 @@ When the Raging Oni King state caused by Royal Descent: Behold, Itto the Evil! e
                             <span class="constellationsName">10 Years of Hanamizaka Fame</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increases the level of Royal Descent: Behold, Itto the Evil! by 3.
+                                    <span class="constellationsDescription">Increases the level of Royal Descent: Behold, Itto the Evil! by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
