--- a/html/jean.html
+++ b/html/jean.html
@@ -477,7 +477,7 @@ Maximum upgrade level is 15.
                             <span class="constellationsName">Lands of Dandelion</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Within the Field created by Dandelion Breeze, all enemies have their Anemo RES decreased by 40%.
                                     </span>
                             </div>
