--- a/html/kazuha.html
+++ b/html/kazuha.html
@@ -445,7 +445,7 @@ Using Kazuha Slash resets the CD of Chihayaburu.
                             <span class="constellationsName">Yamaarashi Tailwind</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         The Autumn Whirlwind field created by Kazuha Slash has the following effects:
                                         <br>Increases Kaedehara Kazuha's own Elemental Mastery by 200.
                                         <br>Increases the Elemental Mastery of characters within the field by 200.
@@ -475,7 +475,7 @@ Maximum upgrade level is 15.
                             <span class="constellationsName">Oozora Genpou</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Kaedehara Kazuha's Energy is lower than 45, he obtains the following effects:
                                         <br>Pressing or Holding Chihayaburu regenerates 3 or 4 Energy for Kaedehara Kazuha, respectively.
                                         <br>When gliding, Kaedehara Kazuha regenerates 2 Energy per second.
@@ -490,7 +490,7 @@ Maximum upgrade level is 15.
                             <span class="constellationsName">Wisdom of Bansei</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Kazuha Slash by 3.
 Maximum upgrade level is 15.
                                     </span>
