--- a/html/klee.html
+++ b/html/klee.html
@@ -457,7 +457,7 @@ Attacks and Skills have a certain chance to summon a spark that bombards enemies
                             <span class="constellationsName">Explosive Frags</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Being hit by Jumpy Dumpty's mines decreases enemy DEF by 23% for 10s.</span>
+                                    <span class="constellationsDescription">Being hit by Jumpy Dumpty's mines decreases enemy DEF by 23% for 10s.</span>
                             </div>
                         </div>
                     </div>
@@ -480,7 +480,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Sparkly Explosion</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 If Klee leaves the field during the duration of Sparks 'n' Splash, her departure triggers an explosion that deals 555% of her ATK as AoE Pyro DMG.
                                     </span>
                             </div>
@@ -493,7 +493,7 @@ If Klee leaves the field during the duration of Sparks 'n' Splash, her departure
                             <span class="constellationsName">Nova Burst</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Sparks 'n' Splash by 3.
+                                    <span class="constellationsDescription">Increase the Level of Sparks 'n' Splash by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
