--- a/html/mona.html
+++ b/html/mona.html
@@ -467,7 +467,7 @@ A Phantom created in this manner lasts for 2s, and its explosion DMG is equal to
                             <span class="constellationsName">Lunar Chain</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">When a Normal Attack hits, there is a 20% chance that it will be automatically followed by a Charged Attack.
+                                    <span class="constellationsDescription">When a Normal Attack hits, there is a 20% chance that it will be automatically followed by a Charged Attack.
 This effect can only occur once every 5s.</span>
                             </div>
                         </div>
@@ -491,7 +491,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Prophecy of Oblivion</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">When a character attacks an enemy affected by the Omen status effect, their CRIT Rate is increased by 15%.</span>
+                                    <span class="constellationsDescription">When a character attacks an enemy affected by the Omen status effect, their CRIT Rate is increased by 15%.</span>
                             </div>
                         </div>
                     </div>
@@ -502,7 +502,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Mockery of Fortuna</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Mirror Reflection of Doom by 3.
+                                    <span class="constellationsDescription">Increase the Level of Mirror Reflection of Doom by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
