--- a/html/ningguang.html
+++ b/html/ningguang.html
@@ -471,7 +471,7 @@ When a Normal Attack hits, it deals AoE DMG.
                             <span class="constellationsName">Shock Effect</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When Jade Screen is shattered, its CD will reset.
 Can occur once every 6s.
                                     </span>
@@ -497,7 +497,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Exquisite be the Jade, Outshining All Beneath</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Jade Screen increases nearby characters' Elemental RES by 10%.
                                     </span>
                             </div>
@@ -510,7 +510,7 @@ Jade Screen increases nearby characters' Elemental RES by 10%.
                             <span class="constellationsName">Invincible be the Jade Screen</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Jade Screen by 3.
+                                    <span class="constellationsDescription">Increase the Level of Jade Screen by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
