--- a/html/noelle.html
+++ b/html/noelle.html
@@ -456,7 +456,7 @@ While Sweeping Time and Breastplate are both in effect, the chance of Breastplat
                             <span class="constellationsName">Combat Maid</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Decreases the Stamina Consumption of Noelle's Charged Attacks by 20% and increases her Charged Attack DMG by 15%.</span>
+                                    <span class="constellationsDescription">Decreases the Stamina Consumption of Noelle's Charged Attacks by 20% and increases her Charged Attack DMG by 15%.</span>
                             </div>
                         </div>
                     </div>
@@ -479,7 +479,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">To Be Cleaned</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When Breastplate's duration expires or it is destroyed by DMG, it will deal 400% ATK of Geo DMG to surrounding enemies.
                                     </span>
                             </div>
@@ -492,7 +492,7 @@ When Breastplate's duration expires or it is destroyed by DMG, it will deal 400%
                             <span class="constellationsName">Favonius Sweeper Master</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Sweeping Time by 3.
+                                    <span class="constellationsDescription">Increase the Level of Sweeping Time by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
