--- a/html/razor.html
+++ b/html/razor.html
@@ -484,7 +484,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Bite</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When casting Claw and Thunder (Press), enemies hit will have their DEF decreased by 15% for 7s.
                                     </span>
                             </div>
@@ -497,7 +497,7 @@ When casting Claw and Thunder (Press), enemies hit will have their DEF decreased
                             <span class="constellationsName">Sharpened Claws</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Claw and Thunder by 3.
+                                    <span class="constellationsDescription">Increase the Level of Claw and Thunder by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
