--- a/html/sayu.html
+++ b/html/sayu.html
@@ -440,7 +440,7 @@
                             <span class="constellationsName">Egress Prep</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         DMG of Fuufuu Whirlwind Kick in Tapping (mobile)/Press (PC & PlayStation) Mode increased by 3.3%.<br>
                                         Every 0.5s in the Fuufuu Windwheel state will increase the DMG of this Fuufuu Whirlwind Kick by 3.3%. The maximum DMG increase possible through this method is 66%.
                                     </span>
@@ -468,7 +468,7 @@
                             <span class="constellationsName">Skiving: New and Improved</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Sayu recovers 1.2 Energy when she triggers a Swirl reaction. This effect occurs once every 2s.
                                     </span>
                             </div>
@@ -481,7 +481,7 @@
                             <span class="constellationsName">Speed Comes First</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Yoohoo Art: Fuuin Dash by 3.
                                         Maximum upgrade level is 15.
                                     </span>
