--- a/html/tartaglia.html
+++ b/html/tartaglia.html
@@ -470,7 +470,7 @@
                             <span class="constellationsName">Foul Legacy: Understream</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">When opponents affected by Riptide are defeated, Tartaglia regenerates 4 Elemental Energy.
+                                    <span class="constellationsDescription">When opponents affected by Riptide are defeated, Tartaglia regenerates 4 Elemental Energy.
                                     </span>
                             </div>
                         </div>
@@ -494,7 +494,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Abyssal Mayhem: Hydrosprout</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 If Tartaglia is in Foul Legacy: Raging Tide's Melee Stance, triggers Riptide Slash against opponents on the field affected by Riptide every 4s, otherwise, triggers Riptide Flash.
 Riptide Slashes and Riptide Flashes triggered by this Constellation effect are not subject to the time intervals that would typically apply to these two Riptide effects, nor do they have any effect on those time intervals.
                                     </span>
@@ -508,7 +508,7 @@ Riptide Slashes and Riptide Flashes triggered by this Constellation effect are n
                             <span class="constellationsName">Havoc: Formless Blade</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Havoc: Obliteration by 3.
+                                    <span class="constellationsDescription">Increase the Level of Havoc: Obliteration by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
