--- a/html/thoma.html
+++ b/html/thoma.html
@@ -462,7 +462,7 @@
                             <span class="constellationsName">A Subordinate's Skills</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Crimson Ooyoroi's duration is increased by 3s.
                                     </span>
                             </div>
@@ -489,7 +489,7 @@
                             <span class="constellationsName">Long-Term Planning</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         After using Crimson Ooyoroi, 15 Energy will be restored to Thoma.
                                     </span>
                             </div>
@@ -502,7 +502,7 @@
                             <span class="constellationsName">Raging Wildfire</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases the Level of Crimson Ooyoroi by 3.
                                         Maximum upgrade level is 15.
                                     </span>
