--- a/html/xiangling.html
+++ b/html/xiangling.html
@@ -464,7 +464,7 @@
                             <span class="constellationsName">Slowbake</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Pyronado's duration is increased by 40%.
                                     </span>
                             </div>
@@ -477,7 +477,7 @@
                             <span class="constellationsName">Guoba Mad</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases the Level of Guoba Attack by 3.
                                         Maximum upgrade level is 15.
                                     </span>
