--- a/html/xiao.html
+++ b/html/xiao.html
@@ -468,7 +468,7 @@
                             <span class="constellationsName">Annihilation Eon - Blossom of Kaleidos</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When in party but not on the field, Xiao's Energy Recharge is increased by 25%.
                                     </span>
                             </div>
@@ -495,7 +495,7 @@
                             <span class="constellationsName">Transcension - Extinction of Suffering</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Xiao's HP falls below 50%, he gains a 100% DEF Bonus.
                                     </span>
                             </div>
@@ -508,7 +508,7 @@
                             <span class="constellationsName">Evolution Eon - Origin of Ignorance</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Bane of All Evil by 3.<br>
                                         Maximum upgrade level is 15.
                                     </span>
