--- a/html/xinyan.html
+++ b/html/xinyan.html
@@ -453,7 +453,7 @@
                             <span class="constellationsName">Impromptu Opening</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Riff Revolution Physical DMG has its Crit rate increased by 100%, and will form a shield at Shield Level 3: Rave when cast.
                                     </span>
                             </div>
@@ -480,7 +480,7 @@
                             <span class="constellationsName">Wildfire Rhythm</span>
                             <span>Constellation 4</span>
                             <div>
-                                <span clas="constellationsDescription">
+                                <span class="constellationsDescription">
                                     Sweeping Fervor's swing DMG decrease opponents Physical RES by 15% for 12s.
                                 </span>
                             </div>
@@ -493,7 +493,7 @@
                             <span class="constellationsName">Screamin' for an Encore</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases the Level of Riff Revolution by 3.
                                         Maximum upgrade level is 15.
                                     </span>
