--- a/html/yanfei.html
+++ b/html/yanfei.html
@@ -477,7 +477,7 @@
                             <span class="constellationsName">Supreme Amnesty</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Done Deal is used: Creates a shield which absorbes upto 45% of Yanfei's Max HP for 15s. This shield absorbes Pyro DMG 250% more efficiently.
                                     </span>
                             </div>
@@ -490,7 +490,7 @@
                             <span class="constellationsName">Abiding Affidavit</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases the Level of Done Deal by 3.
                                         Maximum upgrade level is 15.
                                     </span>
