--- a/html/zhongli.html
+++ b/html/zhongli.html
@@ -460,7 +460,7 @@ Characters protected by the Jade Shield will decrease the Elemental RES and Phys
                             <span class="constellationsName">Stone, the Cradle of Jade</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Planet Befall grants nearby characters on the field a Jade Shield when it descends.
                                     </span>
                             </div>
@@ -487,7 +487,7 @@ Characters protected by the Jade Shield will decrease the Elemental RES and Phys
                             <span class="constellationsName">Topaz, Unbreakable and Fearless</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases Planet Befall's AoE by 20% and increases the duration of Planet Befall's Petrification effect by 2s.
                                     </span>
                             </div>
@@ -500,7 +500,7 @@ Characters protected by the Jade Shield will decrease the Elemental RES and Phys
                             <span class="constellationsName">Lazuli, Herald of the Order</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Planet Befall by 3.<br>
                                         Maximum upgrade level is 15.
                                     </span>
