--- a/html/kokomi.html
+++ b/html/kokomi.html
@@ -455,9 +455,9 @@ This DMG is not considered Normal Attack DMG.
                             <span class="constellationsName">The Clouds Like Waves Rippling</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Sangonomiya Kokomi gains the following Healing Bonuses with regard to characters with 50% or less HP via the following methods:</span>
-                                    <span clas="constellationsDescription">Kurage's Oath Bake-Kurage: 4.5% of Kokomi's Max HP.</span>
-                                    <span clas="constellationsDescription">Nereid's Ascension Normal and Charged Attacks: 0.6% of Kokomi's Max HP.</span>
+                                    <span class="constellationsDescription">Sangonomiya Kokomi gains the following Healing Bonuses with regard to characters with 50% or less HP via the following methods:</span>
+                                    <span class="constellationsDescription">Kurage's Oath Bake-Kurage: 4.5% of Kokomi's Max HP.</span>
+                                    <span class="constellationsDescription">Nereid's Ascension Normal and Charged Attacks: 0.6% of Kokomi's Max HP.</span>
                             </div>
                         </div>
                     </div>
@@ -480,7 +480,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">The Moon Overlooks the Waters</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 While donning the Ceremonial Garment created by Nereid's Ascension, Sangonomiya Kokomi's Normal Attack SPD is increased by 10%, and Normal Attacks that hit opponents will restore 0.8 Energy for her.
 This effect can occur once every 0.2s.
                                     </span>
@@ -494,7 +494,7 @@ This effect can occur once every 0.2s.
                             <span class="constellationsName">All Streams Flow to the Sea</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Kurage's Oath by 3.
+                                    <span class="constellationsDescription">Increase the Level of Kurage's Oath by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
