--- a/html/raiden.html
+++ b/html/raiden.html
@@ -466,7 +466,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Pledge of Propriety</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When the Musou Isshin state applied by Secret Art: Musou Shinsetsu expires, all nearby party members (excluding the Raiden Shogun) gain 30% bonus ATK for 10s.
                                     </span>
                             </div>
@@ -479,7 +479,7 @@ When the Musou Isshin state applied by Secret Art: Musou Shinsetsu expires, all 
                             <span class="constellationsName">Shogun's Descent</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Transcendence: Baleful Omen by 3.
+                                    <span class="constellationsDescription">Increase the Level of Transcendence: Baleful Omen by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
