--- a/html/sara.html
+++ b/html/sara.html
@@ -474,7 +474,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Conclusive Proof</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 The number of Tengu Juurai: Stormcluster released by Subjugation: Koukou Sendou is increased to 6.
                                     </span>
                             </div>
@@ -487,7 +487,7 @@ The number of Tengu Juurai: Stormcluster released by Subjugation: Koukou Sendou 
                             <span class="constellationsName">Spellsinger</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Tengu Stormcall by 3.
+                                    <span class="constellationsDescription">Increase the Level of Tengu Stormcall by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
