--- a/html/venti.html
+++ b/html/venti.html
@@ -440,7 +440,7 @@
                             <span class="constellationsName">Breeze of Reminiscence</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Skyward Sonnet decreases enemy Anemo RES by 12% for 10s. Enemies launched by Skyward Sonnet suffer an additional 12% Anemo RES and Physical RES decrease while airborne.
                                     </span>
                             </div>
@@ -467,7 +467,7 @@
                             <span class="constellationsName">Hurricane of Freedom</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Venti picks up an Elemental Orb or Particle, he receives a 25% Anemo DMG Bonus for 10s.
                                     </span>
                             </div>
@@ -480,7 +480,7 @@
                             <span class="constellationsName">Concerto dal Cielo</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increase the Level of Skyward Sonnet by 3.
                                         Maximum upgrade level is 15.
                                     </span>
