--- a/html/xingqiu.html
+++ b/html/xingqiu.html
@@ -456,7 +456,7 @@
                             <span class="constellationsName">Rainbow Upon the Azure Sky</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">Extends the duration of Guhua Sword - Raincutter by 3s.
+                                    <span class="constellationsDescription">Extends the duration of Guhua Sword - Raincutter by 3s.
                                     Decreases the Hydro RES of enemies hit by sword rain attacks by 15% for 4s.
                                     </span>
                             </div>
@@ -481,7 +481,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Evilsoother</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Throughout the duration of Guhua Sword: Raincutter, the DMG dealt by Guhua Sword: Fatal Rainscreen is increased by 50%.
                                     </span>
                             </div>
@@ -494,7 +494,7 @@ Throughout the duration of Guhua Sword: Raincutter, the DMG dealt by Guhua Sword
                             <span class="constellationsName">Embrace of Rain</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Guhua Sword - Fatal Rainscreen by 3.
+                                    <span class="constellationsDescription">Increase the Level of Guhua Sword - Fatal Rainscreen by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
