--- a/html/yoimiya.html
+++ b/html/yoimiya.html
@@ -455,7 +455,7 @@ One Aurous Blaze explosion can be triggered every 2s. When Yoimiya is down, Auro
                             <span class="constellationsName">A Procession of Bonfires</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Yoimiya's Pyro DMG scores a CRIT Hit, Yoimiya will gain a 25% Pyro DMG Bonus for 6s.
                                         This effect can be triggered even when Yoimiya is not the active character.
                                     </span>
@@ -483,7 +483,7 @@ One Aurous Blaze explosion can be triggered every 2s. When Yoimiya is down, Auro
                             <span class="constellationsName">Pyrotechnic Professional</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         When Yoimiya's own Aurous Blaze triggers an explosion, Niwabi Fire-Dance's CD is decreased by 1.2.                                    </span>
                             </div>
                         </div>
@@ -495,7 +495,7 @@ One Aurous Blaze explosion can be triggered every 2s. When Yoimiya is down, Auro
                             <span class="constellationsName">A Summer Festival's Eve</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
                                         Increases the Level of Ryuukin Saxifrage by 3.
                                         Maximum upgrade level is 15.
                                     </span>
