--- a/html/yunjin.html
+++ b/html/yunjin.html
@@ -458,7 +458,7 @@ Opening Flourish's CD is decreased by 18%.
                             <span class="constellationsName">Myriad Mise-En-Scene</span>
                             <span>Constellation 2</span>
                             <div>
-                                    <span clas="constellationsDescription">After Cliffbreaker's Banner is unleashed, all nearby party members' Normal Attack DMG is increased by 15% for 12s.</span>
+                                    <span class="constellationsDescription">After Cliffbreaker's Banner is unleashed, all nearby party members' Normal Attack DMG is increased by 15% for 12s.</span>
                             </div>
                         </div>
                     </div>
@@ -481,7 +481,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Flower and a Fighter</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 When Yun Jin triggers the Crystallize Reaction, her DEF is increased by 20% for 12s.
                                     </span>
                             </div>
@@ -494,7 +494,7 @@ When Yun Jin triggers the Crystallize Reaction, her DEF is increased by 20% for 
                             <span class="constellationsName">Famed Throughout the Land</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increases the Level of Opening Flourish by 3.
+                                    <span class="constellationsDescription">Increases the Level of Opening Flourish by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
