--- a/html/yanfei.html
+++ b/html/yanfei.html
@@ -312,7 +312,7 @@
                         <div>
                             <img alt="Treasure Hoarder Insignia" class="material rare1"
                                  src="../images/img-genshin/items/treasure_hoarder_insignia.png">
-                            <span class="materialsName">DTreasure Hoarder Insignia (x18)</span>
+                            <span class="materialsName">Treasure Hoarder Insignia (x18)</span>
                         </div>
                         <div>
                             <img alt="Silver Raven Insignia" class="material rare2"
