--- a/html/bennett.html
+++ b/html/bennett.html
@@ -468,7 +468,7 @@ Fantastic Voyage's ATK increases no longer has an HP restriction, and gains an a
                             <span class="constellationsName">Impasse Conqueror</span>
                             <span>Constellation 2</span>
                             <div>
-                                <span clas="constellationsDescription">When Bennett's HP falls below 70%, his Energy Recharge is increased by 30%.</span>
+                                <span class="constellationsDescription">When Bennett's HP falls below 70%, his Energy Recharge is increased by 30%.</span>
                             </div>
                         </div>
                     </div>
@@ -491,7 +491,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Unexpected Odyssey</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Using a Normal Attack when executing the second attack of Passion Overload's Charge Level 1 allows an additional attack to be performed. This additional attack does 135% of the second attack's DMG.
                                     </span>
                             </div>
@@ -504,7 +504,7 @@ Using a Normal Attack when executing the second attack of Passion Overload's Cha
                             <span class="constellationsName">True Explorer</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increase the Level of Fantastic Voyage by 3.
+                                    <span class="constellationsDescription">Increase the Level of Fantastic Voyage by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
