--- a/html/chongyun.html
+++ b/html/chongyun.html
@@ -486,7 +486,7 @@ Maximum upgrade level is 15.</span>
                             <span class="constellationsName">Frozen Skies</span>
                             <span>Constellation 4</span>
                             <div>
-                                    <span clas="constellationsDescription">
+                                    <span class="constellationsDescription">
 Chongyun regenerates 1 Energy every time he hits an enemy affected by Cold or Frozen status effects.
 This effect can only occur once every 2s.
                                     </span>
@@ -500,7 +500,7 @@ This effect can only occur once every 2s.
                             <span class="constellationsName">The True Path</span>
                             <span>Constellation 5</span>
                             <div>
-                                    <span clas="constellationsDescription">Increases the level of Spirit Blade - Chongyun's Layered Frost by 3.
+                                    <span class="constellationsDescription">Increases the level of Spirit Blade - Chongyun's Layered Frost by 3.
 Maximum upgrade level is 15.</span>
                             </div>
                         </div>
