talents gif responsive

--- a/html/albedo.html
+++ b/html/albedo.html
@@ -172,7 +172,7 @@
 </nav>
 
 <div id="fullpage">
-    <div class="section" id="section1">
+    <div class="section fp-auto-height-responsive" id="section1">
         <div class="background">
         </div>
 
@@ -544,7 +544,7 @@
         </div>
     </div>
 
-    <div class="section" id="section2">
+    <div class="section fp-auto-height-responsive" id="section2">
         <div class="video">
             <div>
                 <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -556,7 +556,7 @@
         </div>
     </div>
 
-    <div class="section fp-auto-height" id="section3">
+    <div class="section fp-auto-height fp-auto-height-responsive" id="section3">
         <footer>
             <div class="top">
 
@@ -599,10 +599,10 @@
         type="text/javascript"></script>
 
 <script defer>
+
     var myFullpage = new fullpage('#fullpage', {
         autoScrolling: true,
         keyboardScrolling: true,
-
     })
 </script>
 
