added responsive properties on index page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="style/main.css" rel="stylesheet">
     <link href="style/menu.css" rel="stylesheet">
     <link href="style/footer.css" rel="stylesheet">
+    <link href="style/responsive.css" rel="stylesheet" type="text/css"/>
     <link href="https://rawgit.com/alvarotrigo/fullPage.js/master/jquery.fullPage.css" rel="stylesheet">
     <link href="images/icons/Character_Paimon_Portrait.png" rel="icon">
     <script src="script/main.js"></script>
